--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
+    <header class="header">
+      <div class= "header__bar row">
+        <h1 class="grid-6"><a href="/">MovesTweet</a></h1> 
+        <div class="user_nav grid-6">
+        <a class="post" href="/posts/new">投稿する</a>
+      </div>
+    </header>    
+
     <%= yield %>
+    <footer>
+      <p>
+        Copyright MovesTweet 2021.
+      </p>
+    </footer>  
   </body>
 </html>
